Improve GRADLE build Performance

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,10 @@ scmVersion {
 }
 
 allprojects {
+    tasks.withType(Test).configureEach {
+        forkEvery = 100
+    }
+
     project.version = scmVersion.version
 }
 
